--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "parcel",
+  "jest": {
+    "verbose": true
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^25.1.0",
     "parcel-bundler": "^1.12.4",
     "sass": "^1.25.0",
     "typescript": "^3.7.5"
